--- a/my-app/package.json
+++ b/my-app/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-file-system": "~18.0.4",
